Header HTML done

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
   <title>Drachenwald</title>
 </head>
 <body>
-  <div class="header">
+  <header class="header">
     <div class="brand">
-
+      <a href="#" class="logo"><i class="fa-solid fa-dragon"></i></a>
+      <div>
+        <h1 class="main-name logo">Drachenwald</h1>
+        <p class="sub-name">Restaurant</p>
+      </div>
     </div>
-  </div>
+    <div class="header-banner">
+      <h1 class="main-heading">Willkommen</h1>
+      <h3 class="sub-heading">Traditional Cerman Cuisine</h3>
+      <button class="main-btn">Book Now</button>
+    </div>
+  </header>
 </body>
 </html>
