Reorganised Sass files by separating variables, base styles, components and layouts into their own files.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="header-banner">
       <h1 class="main-heading">Willkommen</h1>
-      <h3 class="sub-heading">Traditional Cerman Cuisine</h3>
+      <h3 class="sub-heading">Traditional German Cuisine</h3>
       <button class="main-btn">Book Now</button>
     </div>
   </header>
