Styled logo symbol

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="brand">
       <a href="#" class="logo"><i class="fa-solid fa-dragon"></i></a>
       <div>
-        <h1 class="main-name logo">Drachenwald</h1>
+        <h1 class="main-name logo-font">Drachenwald</h1>
         <p class="sub-name">Restaurant</p>
       </div>
     </div>
