Starting to work on the About Us section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
       <button class="main-btn">Book Now</button>
     </div>
   </header>
+
+  <section class="about-us">
+    <div class="about-us-left">
+      <img src="images/about.png" alt="Schitzel course">
+    </div>
+    <div class="about-us-right">
+      <h1 class="main-heading">About Us</h1> 
+      <h3 class="sub-heading">Bringing Bavaria to You</h3>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <p class="description">Drachenwald is more than just a restaurant; it's a celebration of German culture and tradition. Our passion for authentic cuisine is reflected in every dish we serve, crafted with love and the finest ingredients. Join us on a culinary journey and experience the warmth and hospitality of Germany right here in your city.</p>
+    </div>
+  </section>
 </body>
 </html>
