Reboot project. New images brought in. Index.html with fonts and fontawesome links

--- a/index.html
+++ b/index.html
@@ -3,50 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/billy">
-  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Loved+by+the+King&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <title>Drachenwald</title>
 </head>
 <body>
-  <header class="header">
-    <div class="brand">
-      <a href="#" class="logo"><i class="fa-solid fa-dragon"></i></a>
-      <div>
-        <h1 class="main-name">Drachenwald</h1>
-        <p class="sub-name">Restaurant</p>
-      </div>
-    </div>
-    <div class="header-banner">
-      <h1 class="main-heading">Willkommen</h1>
-      <h3 class="sub-heading">Traditional German Cuisine</h3>
-      <button class="main-btn">Book Now</button>
-    </div>
-  </header>
-
-  <section class="about-us">
-    <div class="about-us-left">
-      <img src="images/about.png" alt="Schitzel course">
-    </div>
-    <div class="about-us-right">
-      <h1 class="main-heading">About Us</h1> 
-      <h3 class="sub-heading">Bringing Bavaria to You</h3>
-      <div class="stars">
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <p class="description">Drachenwald is more than just a restaurant; it's a celebration of German culture and tradition. Our passion for authentic cuisine is reflected in every dish we serve, crafted with love and the finest ingredients. Join us on a culinary journey and experience the warmth and hospitality of Germany right here in your city.</p>
-      <div class="stars">
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <button type="button" class="main-btn">Learn More</button>
-    </div>
-  </section>
+  
 </body>
 </html>
