Header mark up.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
   <title>Drachenwald</title>
 </head>
 <body>
-  <h1>Drachenwald</h1>
+  <header class="header">
+    <div class="brand">
+      <a href="#" class="logo">
+        <i class="fa-solid fa-dragon"></i>
+      </a>
+      <div>
+        <h1 class="main-name">Drachenwald</h1>
+        <p class="sub-name">Forest</p>
+      </div>
+    </div>
+    <div class="header-banner">
+      <h1 class="main-heading">Breathe!</h1>
+      <h3 class="sub-heading">Escape to the Wilderness.</h3>
+      <button type="button" class="main-btn">Read More</button>
+    </div>
+  </header>
+
 </body>
 </html>
