--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <div>
         <h1 class="main-name">Drachenwald</h1>
-        <p class="sub-name">Forest</p>
+        <p class="sub-name">Tours</p>
       </div>
     </div>
     <div class="header-banner">
