--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
     </div>
     <div class="header-banner">
       <h1 class="main-heading">Breathe!</h1>
-      <h3 class="sub-heading">Escape to the Wilderness.</h3>
+      <h3 class="sub-heading">Escape to the Wilderness</h3>
       <button type="button" class="main-btn">Read More</button>
     </div>
   </header>
 
+  <section class="about-us">
+    <div class="about-us-left">
+      <img src="" alt="">
+    </div>
+  </section>
 </body>
 </html>
