Brought about-us image in.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section class="about-us">
     <div class="about-us-left">
-      <img src="" alt="">
+      <img src="./images/about-us.jpg" alt="forest at night">
     </div>
   </section>
 </body>
