Icons brought in.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <div class="about-us-left">
       <img src="./images/about-us.jpg" alt="forest at night">
     </div>
+    <div class="about-us-right">
+      <h1 class="main-heading">About Us</h1>
+      <h3 class="sub-heading">The Outdoor Adventurers</h3>
+      <div class="icons">
+        <i class="fa-solid fa-tree icon"></i>
+        <i class="fa-solid fa-campground icon"></i>
+        <i class="fa-solid fa-mountain-sun icon"></i>
+      </div>
+    </div>
   </section>
 </body>
 </html>
