--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <i class="fa-solid fa-campground icon"></i>
         <i class="fa-solid fa-mountain-sun icon"></i>
       </div>
+      <p class="description">Drachenwald Tours has been a gateway to unforgettable outdoor adventures. Specialising in forest camping tours, we offer immersive experiences that reconnect travelers with nature’s beauty. Whether trekking through ancient woodlands or camping under the stars, our expertly crafted journeys bring the wilderness to life with adventure, serenity, and discovery.</p>
     </div>
   </section>
 </body>
