--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
     </div>
   </section>
 
-  
+  <section class="gallery">
+    <div class="cards-wrapper">
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Canada</h1>
+          <p class="card-overlay-paragraph">Price: £1600</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-1.jpg" alt="Canada tour">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
