All card markup done.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,50 @@
       <div class="card">
         <div class="card-overlay">
           <h1 class="card-overlay-heading">Canada</h1>
-          <p class="card-overlay-paragraph">Price: £1600</p>
+          <p class="card-overlay-paragraph">Price: £2600</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
         <img src="./images/gallery-1.jpg" alt="Canada tour">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Austria</h1>
+          <p class="card-overlay-paragraph">Price: £1600</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-2.jpg" alt="Austria tour">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Germany</h1>
+          <p class="card-overlay-paragraph">Price: £1700</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-3.jpg" alt="Germany tour">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">England</h1>
+          <p class="card-overlay-paragraph">Price: £1500</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-4.jpg" alt="England tour">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Switzerland</h1>
+          <p class="card-overlay-paragraph">Price: £2000</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-5.jpg" alt="Switzerland tour">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Chile</h1>
+          <p class="card-overlay-paragraph">Price: £3300</p>
+          <button type="button" class="card-overlay-btn">View Tour</button>
+        </div>
+        <img src="./images/gallery-6.jpg" alt="Chile tour">
       </div>
     </div>
   </section>
