Added card-img class to image elements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p class="card-overlay-paragraph">Price: £2600</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-1.jpg" alt="Canada tour">
+        <img class="card-img" src="./images/gallery-1.jpg" alt="Canada tour">
       </div>
       <div class="card">
         <div class="card-overlay">
@@ -67,7 +67,7 @@
           <p class="card-overlay-paragraph">Price: £1600</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-2.jpg" alt="Austria tour">
+        <img class="card-img" src="./images/gallery-2.jpg" alt="Austria tour">
       </div>
       <div class="card">
         <div class="card-overlay">
@@ -75,7 +75,7 @@
           <p class="card-overlay-paragraph">Price: £1700</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-3.jpg" alt="Germany tour">
+        <img class="card-img" src="./images/gallery-3.jpg" alt="Germany tour">
       </div>
       <div class="card">
         <div class="card-overlay">
@@ -83,7 +83,7 @@
           <p class="card-overlay-paragraph">Price: £1500</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-4.jpg" alt="England tour">
+        <img class="card-img" src="./images/gallery-4.jpg" alt="England tour">
       </div>
       <div class="card">
         <div class="card-overlay">
@@ -91,7 +91,7 @@
           <p class="card-overlay-paragraph">Price: £2000</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-5.jpg" alt="Switzerland tour">
+        <img class="card-img" src="./images/gallery-5.jpg" alt="Switzerland tour">
       </div>
       <div class="card">
         <div class="card-overlay">
@@ -99,7 +99,7 @@
           <p class="card-overlay-paragraph">Price: £3300</p>
           <button type="button" class="card-overlay-btn">View Tour</button>
         </div>
-        <img src="./images/gallery-6.jpg" alt="Chile tour">
+        <img class="card-img" src="./images/gallery-6.jpg" alt="Chile tour">
       </div>
     </div>
   </section>
