Working on footer markup.

--- a/index.html
+++ b/index.html
@@ -103,5 +103,14 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="footer-header">
+      <i class="fa-solid fa-dragon"></i>
+      <div>
+        <h1 class="main-name">Drachenwald</h1>
+        <p className="sub-name">Restaurant</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
