--- a/index.html
+++ b/index.html
@@ -111,6 +111,30 @@
         <p className="sub-name">Restaurant</p>
       </div>
     </div>
+    <div class="footer-social-media">
+      <ul class="social-media">
+        <li class.social-media-item>
+          <a href="#" class="socila-media-link">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+        </li>
+        <li class.social-media-item>
+          <a href="#" class="socila-media-link">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+        </li>
+        <li class.social-media-item>
+          <a href="#" class="socila-media-link">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li class.social-media-item>
+          <a href="#" class="socila-media-link">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
