--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
         </li>
       </ul>
     </div>
+    <div class="footer-copyright">
+      <p class="footer-copyright-paragraph">
+        <span>Drachenwald</span> &copy; 2025. All Rights Reserved.
+      </p>
+    </div>
   </footer>
 </body>
 </html>
