--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
       </ul>
     </div>
     <div class="footer-copyright">
-      <p class="footer-copyright-paragraph">
-        <span>Drachenwald</span> &copy; 2025. All Rights Reserved.
+      <p class="footer-copyright-paragraph">Drachenwald &copy; 2025. All Rights Reserved.
       </p>
     </div>
   </footer>
