--- a/index.html
+++ b/index.html
@@ -105,38 +105,40 @@
   </section>
   <footer class="footer">
     <div class="footer-header">
-      <i class="fa-solid fa-dragon"></i>
+      <a href="#" class="logo">
+        <i class="fa-solid fa-dragon"></i>
+      </a>
       <div>
         <h1 class="main-name">Drachenwald</h1>
-        <p className="sub-name">Restaurant</p>
+        <p class="sub-name">Tours</p>
       </div>
     </div>
     <div class="footer-social-media">
       <ul class="social-media">
         <li class.social-media-item>
-          <a href="#" class="socila-media-link">
+          <a href="#" class="social-media-link">
             <i class="fa-brands fa-facebook-f"></i>
           </a>
         </li>
         <li class.social-media-item>
-          <a href="#" class="socila-media-link">
+          <a href="#" class="social-media-link">
             <i class="fa-brands fa-x-twitter"></i>
           </a>
         </li>
         <li class.social-media-item>
-          <a href="#" class="socila-media-link">
+          <a href="#" class="social-media-link">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
         <li class.social-media-item>
-          <a href="#" class="socila-media-link">
+          <a href="#" class="social-media-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
         </li>
       </ul>
     </div>
     <div class="footer-copyright">
-      <p class="footer-copyright-paragraph">Drachenwald &copy; 2025. All Rights Reserved.
+      <p class="footer-copyright-paragraph">&copy; Drachenwald 2025. All Rights Reserved.
       </p>
     </div>
   </footer>
